@@ -362,4 +362,26 @@
         <p><a href="#" class="random action"><span data-translation="shoot">Shoot</span> 3</a></p>
     </div>
 
+    <!-- Show info about writting in Action Chart -->
+    <div class="well" id="mechanics-actionChartInfo" data-translation="actionchartinfo">
+        <p>
+            Following sections explain how to play with the printed books. This application is an adaptation of the game books, 
+            and you will not need to write by hand on the Action Chart (except on the "Annotations" field). The
+            application tries to do all the game accounting.
+        </p>
+        <p>
+            Each time you see a blue bold text like this "<a class="random action">Some text</a>" into the book text, 
+            it's an action. Usually this action will be get a number from the Random Number Table. 
+            Click on it to do that action.
+        </p>
+        <p>
+            Non bold blue text like this "<a>Some text</a>" are links to other places (to the Action Chart, or the map,...).
+            If you click on it you will go there.
+        </p>
+        <p>
+            At this page bottom there are two links to choose your Combat Skill and Endurance Points. Click on them 
+            before continue to the next section.
+        </p>
+    </div>
+
 </div>
